Changelog for Products.LDAPMultiplugins
=======================================

To see earlier changes please see HISTORY.txt.

1.12 (unreleased)
-----------------
- Feature: Added some Sphinx documentation (backport from trunk)

- Reorganisation: Move documentation text files around to conform
  to the zope.org repository policy on package layout.


1.11 (2010-05-28)
-----------------
- Bug: Added GenericSetup magic to fully provide the INode interface
  for the exporter and importer classes, making it easier to nest 
  within other importers.
  (https://bugs.launchpad.net/bugs/586500)


1.10 (2010-05-27)
-----------------
- Bug: enumerateUsers returned undesired results if an exact match
  was required since LDAP searches are not case sensitive.
  (https://bugs.launchpad.net/bugs/585901)
